@@ -19,5 +19,6 @@ rem |     - NormalAndContinue                                             |
 rem |     - NormalAndQuit                                                 |
 rem +---------------------------------------------------------------------+
 
-call java -jar ./renhai.jar 201 100 "ws://192.168.1.5/renhai/websocket" "NormalAndContinue" > MockApp.txt
-rem call java -jar ./renhai.jar 10 100 "ws://192.81.135.31/renhai/websocket" "NormalAndContinue" > MockApp.txt
+rem call java -XX:NewSize=128m -XX:MaxNewSize=250m -XX:PermSize=128m -XX:MaxPermSize=512m -Xms980m -Xmx980m -jar ./renhai.jar 1000 100 "ws://192.168.1.2/renhai/websocket" "NormalAndContinue" > MockApp.txt
+java -jar ./renhai.jar 1 100 "ws://192.168.1.2/renhai/websocket" "NormalAndContinue" > MockApp.txt
+rem call java -jar ./renhai.jar 2000 100 "ws://192.81.135.31/renhai/websocket" "NormalAndContinue" > MockApp.txt
